Prevent crashes when closing kcmshell too fast after closing the connection editor. Hacky, but seems to be the best option so far.

BUG: 273894
(cherry picked from commit 9c4d7b49b691b6ba67b4cca0981bdabc847b675d)